chore: modify ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "@types",
       "./node_modules/@types",
     ],
-    "types": ["node", "express"]
+    "types": ["node", "express"],
+    "resolveJsonModule": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build/**/*"],
