--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "OS System - Criação de ordem de serviço",
   "main": "index.js",
   "scripts": {
-    "dev": "docker-compose up -d && prisma generate && prisma migrate dev && prisma db seed && nodemon",
+    "dev:build": "docker-compose up -d && prisma generate && prisma migrate dev && prisma db seed && mkdir uploads",
+    "dev:start": "nodemon",
     "prepare": "husky install",
     "lint": "npx eslint . --cache",
     "pre-commit": "lint-staged"
@@ -22,6 +23,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.8",
     "@types/node": "^18.14.2",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
@@ -42,6 +44,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0"
   }
 }
